[28:2.3.2]
- Added auto-frameskip feature to gles2glide64
- Fixed file extraction failure on Android 2.2 and below
- Added sensitivity preference for controller analog sticks
- Fixed analog scaling for Mayflash N64/USB adapter
- Removed obsolete items in the Advanced menu
- Updated core and plugins to version 2.0
[27:2.3.1]
- Added support for MOGA Pocket/Pro via MOGA Pivot app (no menu navigation in mode A)
- Fixed junk graphics in the margins for gles2rice video plugin
- Added video resolution/scaling preferences
- Added support for Mad Catz C.T.R.L.R. controller
- Added flicker reduction profile for Iconia B1 A71
- Fixed crash when rumble pak selected on OUYA
- Fixed crash when opening some zipped ROMs
- Tweaked controller deadzone calculation for smoother behavior
- Added Swedish (Svenska) translation
- Updated ACRA crash reporting system to 4.5.0-stable
[26:2.3.0]
- Added gles2glide64 video plugin (fixes broken graphics in many games)
- Fixed extreme lag on Galaxy S3/S4 (US), HTC One, Xperia Z, and others
- Added controller deadzone preference (see button mapping screen)
- Fixed unmappable d-pad on newer batches of Nyko Playpad controller
- Fixed Pokemon Snap photo selection bug (must enable cheat)
- Fixed Pilot Wings 64 shadow bug (must enable cheat)
- Fixed crash related to rumble (stale JNI references)
- Fixed crash related to audio (uninitialized audio tracks)
- Fixed possible crash on OUYA
- Upgraded to SDL 2.0 multimedia library
[25:2.2.1]
- Fixed Pokemon Snap camera control bug (must enable cheat)
- Fixed crash when input plugin disabled
- Fixed crash when cheats enabled
- Warn user if installation appears to be corrupt
- Doubled maximum possible touchscreen scale
- Added support for raphnet GC/N64 controller adapter
- Updated ODK to version 1.0.2
[24:2.2.0]
- Major update to touchscreen skins framework
- Added alternate button style (colored, filled)
- Buttons auto-scale according to device size (overridable)