@@ -1,3 +1,6 @@
+[29:2.3.3]
+- Fixed input/player mapping with the OUYA controller (broken by last OUYA firmware update)
+- Removed OUYA controller deadzone hack (improves analog precision on retail controllers)
 [28:2.3.2]
 - Added auto-frameskip feature to gles2glide64
 - Fixed file extraction failure on Android 2.2 and below
